--- a/image-1.html
+++ b/image-1.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<img src="../images/tangerines.jpg" alt="레드향">
-	[레드향](/images/tangerines.jpg)
+	![레드향](/images/tangerines.jpg)
 	<h1>레드향</h1>
 </body>
 </html>
