--- a/image-1.html
+++ b/image-1.html
@@ -6,7 +6,7 @@
 	<title></title>
 </head>
 <body>
-	![tangerines](https://user-images.githubusercontent.com/109508752/179914377-68be23d5-edfa-4e81-9874-496b940b98d3.jpg)
+	![image](https://user-images.githubusercontent.com/109508752/179915010-05988c3e-5714-4dbd-b80c-40bf3c9d94eb.png)
 	<h1>레드향</h1>
 </body>
 </html>
