--- a/image-1.html
+++ b/image-1.html
@@ -6,6 +6,7 @@
 	<title></title>
 </head>
 <body>
+	<img src="../images/tangerines.jpg" alt="레드향">
 	![image](https://user-images.githubusercontent.com/109508752/179915010-05988c3e-5714-4dbd-b80c-40bf3c9d94eb.png)
 	<h1>레드향</h1>
 </body>
