--- a/image-2.html
+++ b/image-2.html
@@ -8,9 +8,14 @@
 <body>
 	<p>원래 크기의 이미지</p>
 	<img src="../images/salad.jpg" alt="레드향">
+	![image](https://user-images.githubusercontent.com/109508752/179918890-b849412a-42ac-4a42-b473-7f89adcac6c4.png)
+
 	<p>width="50", height="50%"로 지정한 이미지</p>
 	<img src="../images/salad.jpg" alt="레드향" width="50%">
+	![image](https://user-images.githubusercontent.com/109508752/179918890-b849412a-42ac-4a42-b473-7f89adcac6c4.png)
+
 	<p>width="150" 지정한 이미지</p>
 	<img src="../images/salad.jpg" alt="레드향" width="150%">
+	![image](https://user-images.githubusercontent.com/109508752/179918890-b849412a-42ac-4a42-b473-7f89adcac6c4.png)
 </body>
 </html>
