--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>웹 문서 만들기</title>
+	<title>텍스트 링크 만들기</title>
 </head>
 <body>
-	<h1>웹 개발 기초</h1>
-	<p>HTML</p>
-	<p>CSS</p>
-	<p>자바스크립트</p>
+	<div>
+	<p><a href="./05/order.html">주문서 작성하기</a></p>
+	</div>
 </body>
 </html>
