--- a/number.html
+++ b/number.html
@@ -58,6 +58,15 @@
 		<label><input type="checkbox" value="s_5">선물용 5kg</label>
 		<input type="number" min="0" max="3" value="1">개 (최대 3개)
 		</li>
+		
+		<li>
+			<label><input type="checkbox" value="f_3">가정용 3kg</label>
+			<input type="range" min="0" max="5">개 (최대 5개)
+		</li>
+		<li>
+			<label><input type="checkbox" value="f_5">가정용 5kg</label>
+			<input type="range" min="0" max="3" value="1">개 (최대 3개)
+		</li>
 	</ul>
 </body>
 </html>
