--- a/number.html
+++ b/number.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>스핀 박스를 사용해 숫자 입력하기</title>
+	<title>슬라이드 막대를 사용해 숫자 입력하기</title>
 </head>
 <body>
 
