--- a/datetime.html
+++ b/datetime.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>3가지 형식의 날짜 / 2가지 형식의 시간 입력하기</title>
+	<title>날짜의 범위를 제한하여 입력하기</title>
 </head>
 <body>
 
@@ -69,13 +69,8 @@
 		</li>
 	</ul>
 
-	<h3>날짜 지정하기</h3>
-	<input type="date">
-	<input type="month">
-	<input type="week">
-
-	<h3>시간 지정하기</h3>
+	<h3>날짜 / 시간 지정하기</h3>
+	<input type="date" min="2022-01-01" max="2022-12-31">
 	<input type="time">
-	<input type="datetime-local">
 </body>
 </html>
