--- a/button.html
+++ b/button.html
@@ -29,12 +29,19 @@
 						<input type="date" min="2022-01-01" max="2022-12-31">
 					</li>
 				</ul>
+				<div>
+					<input type="submit" value="주문하기">
+					<input type="reset" name="취소하기">
+			</div>
 			</fieldset>
 		</form>
+
+		<fieldset>
+			<label>아이디 : <input type="text" id="user_id" size="10"></label>
+			<label>비밀번호 : <input type="password" id="user_pw" size="10"></label>
+			<input type="image" src="./images/login.png" alt="로그인">
+		</fieldset>
 	</div>
-	<div>
-		<input type="submit" value="주문하기">
-		<input type="reset" name="취소하기">
-	</div>
+	
 </body>
 </html>
