--- a/button.html
+++ b/button.html
@@ -39,7 +39,7 @@
 		<fieldset>
 			<label>아이디 : <input type="text" id="user_id" size="10"></label>
 			<label>비밀번호 : <input type="password" id="user_pw" size="10"></label>
-			<input type="image" src="./images/login.png" alt="로그인">
+			<input type="image" src="img/login.png">
 		</fieldset>
 	</div>
 	
