--- a/button.html
+++ b/button.html
@@ -34,6 +34,17 @@
 					<input type="reset" name="취소하기">
 			</div>
 			</fieldset>
+			<form>
+				<fieldset>
+					<legend>반품 정보</legend>
+						<ul>
+							만일 수령한 상품에 문제가 있다면 즉시 반품 신청해 주세요. <br> <br>
+							반품 신청시 상품의 상태를 사진으로 첨부해 주세요.
+						</ul>
+						<hr>
+						<input type="file">
+				</fieldset>
+			</form>
 		</form>
 
 		<fieldset>
