--- a/button.html
+++ b/button.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>파일 첨부 버튼 추가하기</title>
+	<title>히든 필드를 사용해 서버로 정보 보내기</title>
 </head>
 <body>
 
@@ -48,9 +48,10 @@
 		</form>
 
 		<fieldset>
+			<input type="hidden" value="사이트를 통한 직접 로그인">
 			<label>아이디 : <input type="text" id="user_id" size="10"></label>
 			<label>비밀번호 : <input type="password" id="user_pw" size="10"></label>
-			<input type="image" src="./images/login.png" alt="로그인">
+			<input type="submit" value="로그인">
 		</fieldset>
 	</div>
 		<form>
