--- a/display.html
+++ b/display.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../HTML/CSS/display.css">
     <title>수평 내비게이션 만들기</title>
+    <style>
+    *{
+    box-sizing: border-box;
+}
+
+nav ul {
+    list-style: none;
+}
+nav ul li {
+    display: inline-block;
+    padding: 20px;
+    margin: 0 20px;
+    border: 1px solid #222;
+}
+    </style>
 </head>
 <body>
     <nav>
