--- a/quiz-12.html
+++ b/quiz-12.html
@@ -34,6 +34,17 @@
         .top-menu li a:visited{
             color: black;
         }
+        .top-menu li:last-child{
+            border-right: none;
+        }
+        .top-menu li:not(:last-child) a:hover{
+            background-color: #555;
+            color: white;
+        }
+        .top-menu li:last-child a:hover {
+            background-color: #b30000;
+            color: #fff;
+        }
     </style>
 </head>
 <body>
